# bazel-sample

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  benchmark.sh  build.gradle  config.yaml  repositories.bzl  settings.gradle
module0/: BUILD.bazel  build.gradle
module0/src/main/java/module0packageJava0/: BUILD.bazel  Foo0.java  HostnameGreeter.java  HostnameServer.java
module0/src/main/proto/: BUILD.bazel  helloworld.proto
module1/: BUILD.bazel  build.gradle
module10/: BUILD.bazel  build.gradle
module11/: BUILD.bazel  build.gradle
module12/: BUILD.bazel  build.gradle
module13/: BUILD.bazel  build.gradle
module14/: BUILD.bazel  build.gradle
module15/: BUILD.bazel  build.gradle
module16/: BUILD.bazel  build.gradle
module17/: BUILD.bazel  build.gradle
module18/: BUILD.bazel  build.gradle
module19/: BUILD.bazel  build.gradle
module2/: BUILD.bazel  build.gradle
module20/: BUILD.bazel  build.gradle
module21/: BUILD.bazel  build.gradle
module22/: BUILD.bazel  build.gradle
module23/: BUILD.bazel  build.gradle
module24/: BUILD.bazel  build.gradle
module25/: BUILD.bazel  build.gradle
module26/: BUILD.bazel  build.gradle
module27/: BUILD.bazel  build.gradle
module28/: BUILD.bazel  build.gradle
module29/: BUILD.bazel  build.gradle
module3/: BUILD.bazel  build.gradle
module30/: BUILD.bazel  build.gradle
module31/: BUILD.bazel  build.gradle
module32/: BUILD.bazel  build.gradle
module33/: BUILD.bazel  build.gradle
module34/: BUILD.bazel  build.gradle
module35/: BUILD.bazel  build.gradle
module36/: BUILD.bazel  build.gradle
module37/: BUILD.bazel  build.gradle
module38/: BUILD.bazel  build.gradle
module39/: BUILD.bazel  build.gradle
module4/: BUILD.bazel  build.gradle
module40/: BUILD.bazel  build.gradle
module41/: BUILD.bazel  build.gradle
module42/: BUILD.bazel  build.gradle
module43/: BUILD.bazel  build.gradle
module44/: BUILD.bazel  build.gradle
module45/: BUILD.bazel  build.gradle
module46/: BUILD.bazel  build.gradle
module47/: BUILD.bazel  build.gradle
module48/: BUILD.bazel  build.gradle
module49/: BUILD.bazel  build.gradle
module5/: BUILD.bazel  build.gradle
module50/: BUILD.bazel  build.gradle
module51/: BUILD.bazel  build.gradle
module52/: BUILD.bazel  build.gradle
module53/: BUILD.bazel  build.gradle
module54/: BUILD.bazel  build.gradle
module55/: BUILD.bazel  build.gradle
module56/: BUILD.bazel  build.gradle
module57/: BUILD.bazel  build.gradle
module58/: BUILD.bazel  build.gradle
module59/: BUILD.bazel  build.gradle
module6/: BUILD.bazel  build.gradle
module60/: BUILD.bazel  build.gradle
module61/: BUILD.bazel  build.gradle
module62/: BUILD.bazel  build.gradle
module63/: BUILD.bazel  build.gradle
module64/: BUILD.bazel  build.gradle
module65/: BUILD.bazel  build.gradle
module66/: BUILD.bazel  build.gradle
module67/: BUILD.bazel  build.gradle
module68/: BUILD.bazel  build.gradle
module69/: BUILD.bazel  build.gradle
module7/: BUILD.bazel  build.gradle
module70/: BUILD.bazel  build.gradle
module71/: BUILD.bazel  build.gradle
module72/: BUILD.bazel  build.gradle
module73/: BUILD.bazel  build.gradle
module74/: BUILD.bazel  build.gradle
module75/: BUILD.bazel  build.gradle
module76/: BUILD.bazel  build.gradle
module77/: BUILD.bazel  build.gradle
module78/: BUILD.bazel  build.gradle
module79/: BUILD.bazel  build.gradle
module8/: BUILD.bazel  build.gradle
module80/: BUILD.bazel  build.gradle
module81/: BUILD.bazel  build.gradle
module82/: BUILD.bazel  build.gradle
module83/: BUILD.bazel  build.gradle
module84/: BUILD.bazel  build.gradle
module85/: BUILD.bazel  build.gradle
module86/: BUILD.bazel  build.gradle
module87/: BUILD.bazel  build.gradle
module88/: BUILD.bazel  build.gradle
module89/: BUILD.bazel  build.gradle
module9/: BUILD.bazel  build.gradle
module90/: BUILD.bazel  build.gradle
module91/: BUILD.bazel  build.gradle
module92/: BUILD.bazel  build.gradle
module93/: BUILD.bazel  build.gradle
module94/: BUILD.bazel  build.gradle
module95/: BUILD.bazel  build.gradle
module96/: BUILD.bazel  build.gradle
module97/: BUILD.bazel  build.gradle
module98/: BUILD.bazel
module99/: BUILD.bazel  build.gradle
