java_library(
    name = "module0",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module1",
        "//module12",
        "//module14",
        "//module15",
        "//module16",
        "//module18",
        "//module20",
        "//module21",
        "//module23",
        "//module24",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module32",
        "//module34",
        "//module35",
        "//module37",
        "//module38",
        "//module40",
        "//module42",
        "//module47",
        "//module48",
        "//module49",
        "//module5",
        "//module50",
        "//module51",
        "//module52",
        "//module58",
        "//module59",
        "//module6",
        "//module60",
        "//module61",
        "//module64",
        "//module66",
        "//module7",
        "//module70",
        "//module73",
        "//module74",
        "//module76",
        "//module78",
        "//module8",
        "//module80",
        "//module81",
        "//module83",
        "//module84",
        "//module85",
        "//module86",
        "//module87",
        "//module88",
        "//module89",
        "//module9",
        "//module90",
        "//module91",
        "//module92",
        "//module93",
        "//module94",
        "//module96",
        "//module97",
    ],
)
