load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "helloworld_proto",
    srcs = ["src/main/proto/helloworld.proto"],
)

java_proto_library(
    name = "helloworld_java_proto",
    deps = [":helloworld_proto"],
)

java_grpc_library(
    name = "helloworld_java_grpc",
    srcs = [":helloworld_proto"],
    deps = [":helloworld_java_proto"],
)

java_library(
    name = "module0",
    testonly = 1,
    srcs = [
        "src/main/java/module0packageJava0/Foo0.java",
        "src/main/java/module0packageJava0/HostnameGreeter.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":helloworld_java_grpc",
        ":helloworld_java_proto",
        "//module1",
        "//module12",
        "//module14",
        "//module15",
        "//module16",
        "//module18",
        "//module20",
        "//module21",
        "//module23",
        "//module24",
        "//module26",
        "//module27",
        "//module29",
        "//module3",
        "//module32",
        "//module34",
        "//module35",
        "//module37",
        "//module38",
        "//module40",
        "//module42",
        "//module47",
        "//module48",
        "//module49",
        "//module5",
        "//module50",
        "//module51",
        "//module52",
        "//module58",
        "//module59",
        "//module6",
        "//module60",
        "//module61",
        "//module64",
        "//module66",
        "//module7",
        "//module70",
        "//module73",
        "//module74",
        "//module76",
        "//module78",
        "//module8",
        "//module80",
        "//module81",
        "//module83",
        "//module84",
        "//module85",
        "//module86",
        "//module87",
        "//module88",
        "//module89",
        "//module9",
        "//module90",
        "//module91",
        "//module92",
        "//module93",
        "//module94",
        "//module96",
        "//module97",
        "@io_grpc_grpc_java//stub",
    ],
)

#java_binary(
#    name = "hostname-server",
#    testonly = 1,
#    srcs = [
#        "src/main/java/io/grpc/examples/hostname/HostnameServer.java",
#    ],
#    main_class = "io.grpc.examples.hostname.HostnameServer",
#    runtime_deps = [
#        "@io_grpc_grpc_java//netty",
#    ],
#    deps = [
#        ":module0",
#        "@io_grpc_grpc_java//api",
#        "@io_grpc_grpc_java//services:health",
#        "@io_grpc_grpc_java//services:reflection",
#        "@io_grpc_grpc_proto//:health_java_proto",
#    ],
#)
