java_library(
    name = "module1",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module11",
        "//module13",
        "//module14",
        "//module15",
        "//module17",
        "//module19",
        "//module2",
        "//module20",
        "//module23",
        "//module25",
        "//module26",
        "//module27",
        "//module28",
        "//module30",
        "//module31",
        "//module32",
        "//module34",
        "//module35",
        "//module36",
        "//module38",
        "//module44",
        "//module46",
        "//module48",
        "//module5",
        "//module50",
        "//module51",
        "//module54",
        "//module55",
        "//module56",
        "//module59",
        "//module61",
        "//module65",
        "//module66",
        "//module67",
        "//module7",
        "//module71",
        "//module75",
        "//module76",
        "//module81",
        "//module85",
        "//module86",
        "//module87",
        "//module92",
        "//module95",
        "//module99",
    ],
)
