java_library(
    name = "module10",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module17",
        "//module19",
        "//module20",
        "//module21",
        "//module24",
        "//module29",
        "//module30",
        "//module32",
        "//module36",
        "//module39",
        "//module40",
        "//module43",
        "//module44",
        "//module49",
        "//module50",
        "//module54",
        "//module55",
        "//module57",
        "//module58",
        "//module61",
        "//module62",
        "//module65",
        "//module67",
        "//module68",
        "//module69",
        "//module73",
        "//module76",
        "//module79",
        "//module81",
        "//module82",
        "//module84",
        "//module85",
        "//module91",
    ],
)
