java_library(
    name = "module11",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module12",
        "//module13",
        "//module15",
        "//module16",
        "//module19",
        "//module21",
        "//module22",
        "//module25",
        "//module27",
        "//module29",
        "//module30",
        "//module31",
        "//module35",
        "//module38",
        "//module39",
        "//module43",
        "//module46",
        "//module47",
        "//module48",
        "//module51",
        "//module52",
        "//module53",
        "//module54",
        "//module55",
        "//module57",
        "//module59",
        "//module61",
        "//module62",
        "//module63",
        "//module67",
        "//module69",
        "//module71",
        "//module76",
        "//module77",
        "//module78",
        "//module80",
        "//module82",
        "//module83",
        "//module85",
        "//module86",
        "//module87",
        "//module88",
        "//module89",
        "//module91",
        "//module92",
        "//module93",
        "//module95",
        "//module96",
    ],
)
