java_library(
    name = "module12",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module15",
        "//module17",
        "//module18",
        "//module19",
        "//module21",
        "//module22",
        "//module25",
        "//module28",
        "//module29",
        "//module32",
        "//module34",
        "//module38",
        "//module41",
        "//module42",
        "//module43",
        "//module45",
        "//module47",
        "//module50",
        "//module52",
        "//module53",
        "//module54",
        "//module55",
        "//module59",
        "//module61",
        "//module62",
        "//module63",
        "//module65",
        "//module66",
        "//module67",
        "//module70",
        "//module71",
        "//module72",
        "//module73",
        "//module74",
        "//module75",
        "//module76",
        "//module77",
        "//module78",
        "//module79",
        "//module80",
        "//module82",
        "//module83",
        "//module84",
        "//module85",
        "//module87",
        "//module88",
        "//module89",
        "//module91",
        "//module92",
        "//module94",
        "//module96",
        "//module97",
        "//module98",
        "//module99",
    ],
)
