java_library(
    name = "module13",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module15",
        "//module17",
        "//module18",
        "//module19",
        "//module24",
        "//module25",
        "//module32",
        "//module34",
        "//module38",
        "//module39",
        "//module40",
        "//module42",
        "//module43",
        "//module44",
        "//module48",
        "//module53",
        "//module55",
        "//module56",
        "//module64",
        "//module67",
        "//module68",
        "//module73",
        "//module74",
        "//module76",
        "//module80",
        "//module81",
        "//module84",
        "//module89",
        "//module91",
        "//module93",
        "//module95",
        "//module97",
        "//module98",
        "//module99",
    ],
)
