java_library(
    name = "module14",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module17",
        "//module21",
        "//module24",
        "//module25",
        "//module29",
        "//module30",
        "//module32",
        "//module33",
        "//module36",
        "//module37",
        "//module39",
        "//module42",
        "//module43",
        "//module44",
        "//module46",
        "//module48",
        "//module51",
        "//module56",
        "//module57",
        "//module59",
        "//module60",
        "//module61",
        "//module63",
        "//module64",
        "//module65",
        "//module66",
        "//module67",
        "//module68",
        "//module70",
        "//module71",
        "//module73",
        "//module75",
        "//module77",
        "//module79",
        "//module82",
        "//module84",
        "//module88",
        "//module89",
        "//module91",
        "//module96",
        "//module98",
    ],
)
