java_library(
    name = "module15",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module18",
        "//module20",
        "//module26",
        "//module27",
        "//module32",
        "//module35",
        "//module38",
        "//module39",
        "//module41",
        "//module42",
        "//module45",
        "//module46",
        "//module47",
        "//module50",
        "//module51",
        "//module52",
        "//module53",
        "//module54",
        "//module56",
        "//module57",
        "//module64",
        "//module66",
        "//module68",
        "//module69",
        "//module70",
        "//module71",
        "//module74",
        "//module77",
        "//module78",
        "//module79",
        "//module80",
        "//module83",
        "//module85",
        "//module86",
        "//module88",
        "//module90",
        "//module92",
        "//module95",
        "//module96",
        "//module97",
        "//module99",
    ],
)
