java_library(
    name = "module16",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module17",
        "//module18",
        "//module19",
        "//module23",
        "//module24",
        "//module25",
        "//module28",
        "//module30",
        "//module35",
        "//module37",
        "//module39",
        "//module41",
        "//module44",
        "//module48",
        "//module50",
        "//module51",
        "//module52",
        "//module57",
        "//module58",
        "//module60",
        "//module61",
        "//module63",
        "//module66",
        "//module68",
        "//module69",
        "//module71",
        "//module78",
        "//module79",
        "//module85",
        "//module86",
        "//module91",
        "//module92",
        "//module93",
        "//module95",
        "//module98",
        "//module99",
    ],
)
