java_library(
    name = "module17",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module20",
        "//module22",
        "//module25",
        "//module26",
        "//module27",
        "//module29",
        "//module30",
        "//module31",
        "//module35",
        "//module36",
        "//module42",
        "//module43",
        "//module44",
        "//module46",
        "//module47",
        "//module49",
        "//module53",
        "//module57",
        "//module58",
        "//module59",
        "//module63",
        "//module64",
        "//module67",
        "//module68",
        "//module70",
        "//module71",
        "//module73",
        "//module74",
        "//module75",
        "//module76",
        "//module78",
        "//module80",
        "//module83",
        "//module89",
        "//module92",
        "//module93",
        "//module98",
        "//module99",
    ],
)
