java_library(
    name = "module18",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module20",
        "//module24",
        "//module30",
        "//module31",
        "//module34",
        "//module35",
        "//module38",
        "//module39",
        "//module40",
        "//module41",
        "//module42",
        "//module43",
        "//module44",
        "//module48",
        "//module51",
        "//module52",
        "//module55",
        "//module57",
        "//module58",
        "//module59",
        "//module61",
        "//module63",
        "//module67",
        "//module69",
        "//module71",
        "//module73",
        "//module74",
        "//module75",
        "//module76",
        "//module77",
        "//module81",
        "//module84",
        "//module87",
        "//module88",
        "//module90",
        "//module91",
        "//module92",
    ],
)
