java_library(
    name = "module19",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module21",
        "//module23",
        "//module24",
        "//module26",
        "//module27",
        "//module28",
        "//module29",
        "//module33",
        "//module35",
        "//module36",
        "//module38",
        "//module39",
        "//module41",
        "//module45",
        "//module47",
        "//module48",
        "//module49",
        "//module50",
        "//module51",
        "//module52",
        "//module57",
        "//module58",
        "//module59",
        "//module62",
        "//module63",
        "//module64",
        "//module67",
        "//module68",
        "//module70",
        "//module72",
        "//module74",
        "//module75",
        "//module76",
        "//module78",
        "//module85",
        "//module87",
        "//module88",
        "//module89",
        "//module90",
        "//module92",
        "//module99",
    ],
)
