java_library(
    name = "module2",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module10",
        "//module12",
        "//module14",
        "//module16",
        "//module17",
        "//module19",
        "//module21",
        "//module28",
        "//module3",
        "//module31",
        "//module33",
        "//module36",
        "//module38",
        "//module39",
        "//module4",
        "//module43",
        "//module45",
        "//module49",
        "//module5",
        "//module50",
        "//module51",
        "//module53",
        "//module54",
        "//module55",
        "//module57",
        "//module58",
        "//module61",
        "//module64",
        "//module66",
        "//module69",
        "//module72",
        "//module73",
        "//module74",
        "//module75",
        "//module78",
        "//module79",
        "//module8",
        "//module80",
        "//module84",
        "//module86",
        "//module87",
        "//module89",
        "//module9",
        "//module90",
        "//module91",
        "//module92",
        "//module94",
        "//module98",
    ],
)
