java_library(
    name = "module20",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module22",
        "//module25",
        "//module26",
        "//module30",
        "//module34",
        "//module35",
        "//module38",
        "//module39",
        "//module41",
        "//module42",
        "//module45",
        "//module51",
        "//module53",
        "//module55",
        "//module61",
        "//module63",
        "//module64",
        "//module68",
        "//module69",
        "//module70",
        "//module72",
        "//module74",
        "//module75",
        "//module78",
        "//module80",
        "//module81",
        "//module82",
        "//module85",
        "//module86",
        "//module87",
        "//module89",
        "//module90",
        "//module93",
        "//module94",
        "//module96",
        "//module97",
        "//module98",
    ],
)
