java_library(
    name = "module21",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module22",
        "//module23",
        "//module25",
        "//module28",
        "//module29",
        "//module30",
        "//module31",
        "//module32",
        "//module33",
        "//module36",
        "//module37",
        "//module38",
        "//module44",
        "//module45",
        "//module46",
        "//module48",
        "//module49",
        "//module50",
        "//module51",
        "//module53",
        "//module54",
        "//module58",
        "//module61",
        "//module65",
        "//module68",
        "//module72",
        "//module73",
        "//module75",
        "//module76",
        "//module78",
        "//module79",
        "//module81",
        "//module86",
        "//module87",
        "//module88",
        "//module90",
        "//module92",
        "//module93",
        "//module95",
        "//module99",
    ],
)
