java_library(
    name = "module22",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module23",
        "//module25",
        "//module26",
        "//module27",
        "//module28",
        "//module29",
        "//module30",
        "//module37",
        "//module38",
        "//module39",
        "//module42",
        "//module43",
        "//module44",
        "//module48",
        "//module49",
        "//module51",
        "//module52",
        "//module54",
        "//module55",
        "//module56",
        "//module57",
        "//module58",
        "//module62",
        "//module63",
        "//module66",
        "//module67",
        "//module75",
        "//module77",
        "//module79",
        "//module80",
        "//module82",
        "//module83",
        "//module84",
        "//module86",
        "//module88",
        "//module89",
        "//module90",
        "//module91",
        "//module92",
        "//module93",
        "//module98",
    ],
)
