java_library(
    name = "module23",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module25",
        "//module26",
        "//module28",
        "//module30",
        "//module33",
        "//module34",
        "//module36",
        "//module37",
        "//module39",
        "//module40",
        "//module45",
        "//module46",
        "//module48",
        "//module49",
        "//module50",
        "//module53",
        "//module54",
        "//module57",
        "//module58",
        "//module60",
        "//module61",
        "//module62",
        "//module63",
        "//module64",
        "//module68",
        "//module71",
        "//module74",
        "//module75",
        "//module78",
        "//module81",
        "//module85",
        "//module86",
        "//module89",
        "//module91",
        "//module92",
        "//module93",
        "//module97",
    ],
)
