java_library(
    name = "module24",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module25",
        "//module29",
        "//module32",
        "//module36",
        "//module37",
        "//module38",
        "//module41",
        "//module42",
        "//module43",
        "//module44",
        "//module45",
        "//module46",
        "//module49",
        "//module53",
        "//module56",
        "//module57",
        "//module59",
        "//module61",
        "//module62",
        "//module66",
        "//module69",
        "//module70",
        "//module71",
        "//module72",
        "//module77",
        "//module78",
        "//module79",
        "//module80",
        "//module84",
        "//module86",
        "//module91",
        "//module94",
        "//module97",
    ],
)
