java_library(
    name = "module25",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module26",
        "//module28",
        "//module31",
        "//module32",
        "//module33",
        "//module34",
        "//module35",
        "//module39",
        "//module42",
        "//module44",
        "//module47",
        "//module49",
        "//module50",
        "//module52",
        "//module54",
        "//module56",
        "//module59",
        "//module61",
        "//module66",
        "//module67",
        "//module69",
        "//module70",
        "//module73",
        "//module74",
        "//module78",
        "//module80",
        "//module81",
        "//module82",
        "//module83",
        "//module84",
        "//module85",
        "//module86",
        "//module88",
        "//module89",
        "//module90",
        "//module91",
        "//module92",
        "//module93",
        "//module94",
        "//module95",
        "//module97",
        "//module99",
    ],
)
