java_library(
    name = "module26",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module29",
        "//module30",
        "//module34",
        "//module38",
        "//module39",
        "//module43",
        "//module45",
        "//module46",
        "//module50",
        "//module52",
        "//module54",
        "//module55",
        "//module57",
        "//module59",
        "//module62",
        "//module64",
        "//module66",
        "//module67",
        "//module68",
        "//module69",
        "//module70",
        "//module71",
        "//module73",
        "//module74",
        "//module76",
        "//module79",
        "//module80",
        "//module81",
        "//module82",
        "//module85",
        "//module88",
        "//module89",
        "//module91",
        "//module93",
        "//module95",
    ],
)
