java_library(
    name = "module27",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module29",
        "//module30",
        "//module31",
        "//module33",
        "//module34",
        "//module36",
        "//module38",
        "//module42",
        "//module44",
        "//module45",
        "//module47",
        "//module48",
        "//module51",
        "//module52",
        "//module55",
        "//module57",
        "//module58",
        "//module63",
        "//module64",
        "//module66",
        "//module67",
        "//module75",
        "//module78",
        "//module79",
        "//module81",
        "//module86",
        "//module88",
        "//module89",
        "//module91",
    ],
)
