java_library(
    name = "module28",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module29",
        "//module30",
        "//module31",
        "//module32",
        "//module33",
        "//module34",
        "//module35",
        "//module37",
        "//module39",
        "//module42",
        "//module45",
        "//module48",
        "//module51",
        "//module52",
        "//module53",
        "//module57",
        "//module58",
        "//module60",
        "//module61",
        "//module64",
        "//module67",
        "//module69",
        "//module70",
        "//module72",
        "//module74",
        "//module79",
        "//module81",
        "//module82",
        "//module83",
        "//module87",
        "//module88",
        "//module91",
        "//module93",
        "//module94",
        "//module95",
        "//module99",
    ],
)
