java_library(
    name = "module29",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module30",
        "//module33",
        "//module35",
        "//module37",
        "//module39",
        "//module40",
        "//module42",
        "//module43",
        "//module44",
        "//module45",
        "//module50",
        "//module52",
        "//module53",
        "//module54",
        "//module55",
        "//module57",
        "//module59",
        "//module60",
        "//module61",
        "//module62",
        "//module63",
        "//module68",
        "//module69",
        "//module70",
        "//module71",
        "//module72",
        "//module73",
        "//module75",
        "//module78",
        "//module79",
        "//module82",
        "//module83",
        "//module85",
        "//module87",
        "//module88",
        "//module90",
        "//module91",
        "//module97",
        "//module98",
    ],
)
