java_library(
    name = "module3",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module10",
        "//module12",
        "//module15",
        "//module16",
        "//module17",
        "//module20",
        "//module22",
        "//module27",
        "//module29",
        "//module30",
        "//module34",
        "//module35",
        "//module36",
        "//module38",
        "//module39",
        "//module40",
        "//module43",
        "//module44",
        "//module5",
        "//module51",
        "//module52",
        "//module53",
        "//module55",
        "//module57",
        "//module58",
        "//module59",
        "//module60",
        "//module62",
        "//module63",
        "//module64",
        "//module71",
        "//module72",
        "//module73",
        "//module74",
        "//module75",
        "//module76",
        "//module77",
        "//module79",
        "//module8",
        "//module80",
        "//module82",
        "//module83",
        "//module85",
        "//module87",
        "//module88",
        "//module92",
        "//module94",
        "//module95",
        "//module96",
        "//module97",
        "//module98",
    ],
)
