java_library(
    name = "module30",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module38",
        "//module39",
        "//module40",
        "//module41",
        "//module42",
        "//module43",
        "//module46",
        "//module49",
        "//module50",
        "//module51",
        "//module53",
        "//module58",
        "//module60",
        "//module61",
        "//module65",
        "//module67",
        "//module68",
        "//module69",
        "//module74",
        "//module75",
        "//module78",
        "//module79",
        "//module80",
        "//module81",
        "//module83",
        "//module85",
        "//module88",
        "//module89",
        "//module90",
        "//module91",
        "//module92",
        "//module94",
        "//module95",
        "//module97",
        "//module99",
    ],
)
