java_library(
    name = "module31",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module34",
        "//module35",
        "//module37",
        "//module41",
        "//module42",
        "//module43",
        "//module48",
        "//module51",
        "//module52",
        "//module53",
        "//module56",
        "//module58",
        "//module59",
        "//module65",
        "//module66",
        "//module67",
        "//module68",
        "//module69",
        "//module71",
        "//module72",
        "//module75",
        "//module77",
        "//module81",
        "//module84",
        "//module85",
        "//module90",
        "//module93",
        "//module94",
        "//module95",
        "//module96",
        "//module97",
        "//module98",
    ],
)
