java_library(
    name = "module32",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module33",
        "//module36",
        "//module37",
        "//module38",
        "//module40",
        "//module43",
        "//module47",
        "//module52",
        "//module53",
        "//module55",
        "//module56",
        "//module58",
        "//module59",
        "//module63",
        "//module64",
        "//module66",
        "//module68",
        "//module69",
        "//module70",
        "//module71",
        "//module72",
        "//module75",
        "//module76",
        "//module79",
        "//module80",
        "//module83",
        "//module84",
        "//module86",
        "//module88",
        "//module91",
        "//module93",
        "//module94",
        "//module97",
        "//module99",
    ],
)
