java_library(
    name = "module33",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module39",
        "//module41",
        "//module43",
        "//module45",
        "//module46",
        "//module47",
        "//module48",
        "//module51",
        "//module52",
        "//module56",
        "//module59",
        "//module60",
        "//module62",
        "//module66",
        "//module67",
        "//module71",
        "//module72",
        "//module73",
        "//module76",
        "//module79",
        "//module81",
        "//module82",
        "//module84",
        "//module87",
        "//module90",
        "//module91",
        "//module93",
        "//module94",
        "//module95",
        "//module96",
        "//module97",
    ],
)
