java_library(
    name = "module34",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module35",
        "//module39",
        "//module41",
        "//module42",
        "//module49",
        "//module50",
        "//module51",
        "//module53",
        "//module54",
        "//module56",
        "//module58",
        "//module63",
        "//module65",
        "//module66",
        "//module67",
        "//module68",
        "//module71",
        "//module73",
        "//module74",
        "//module75",
        "//module78",
        "//module80",
        "//module81",
        "//module82",
        "//module84",
        "//module87",
        "//module88",
        "//module91",
        "//module93",
        "//module96",
        "//module99",
    ],
)
