java_library(
    name = "module35",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//module42",
        "//module43",
        "//module44",
        "//module45",
        "//module47",
        "//module49",
        "//module50",
        "//module51",
        "//module52",
        "//module59",
        "//module61",
        "//module62",
        "//module64",
        "//module65",
        "//module67",
        "//module70",
        "//module71",
        "//module74",
        "//module77",
        "//module78",
        "//module79",
        "//module81",
        "//module83",
        "//module84",
        "//module88",
        "//module89",
        "//module93",
        "//module95",
        "//module96",
        "//module97",
        "//module98",
        "//module99",
    ],
)
